// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> renders correctly 1`] = `
<List
  columns={null}
  flush={false}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={null}
    flush={false}
    ordered={false}
  >
    <ul
      className="css-15c2xvw-ListBase em8fnr30"
    >
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;

exports[`<List /> with columns set renders correctly 1`] = `
<List
  columns={3}
  flush={false}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={3}
    flush={false}
    ordered={false}
  >
    <ul
      className="css-f254uk-ListBase-ListBase-ListBase em8fnr30"
    >
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;

exports[`<List /> with flush set renders correctly 1`] = `
<List
  columns={null}
  flush={true}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={null}
    flush={true}
    ordered={false}
  >
    <ul
      className="css-u0ircv-ListBase-ListBase em8fnr30"
    >
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;

exports[`<List /> with ordered prop renders correctly 1`] = `
<List
  columns={null}
  flush={false}
  ordered={true}
>
  <ListBase
    as="ol"
    columns={null}
    flush={false}
    ordered={true}
  >
    <ol
      className="css-15c2xvw-ListBase em8fnr30"
    >
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ol>
  </ListBase>
</List>
`;

exports[`<List /> with responsive columns set renders correctly 1`] = `
<List
  columns={
    Array [
      1,
      2,
      3,
    ]
  }
  flush={false}
  ordered={false}
>
  <ListBase
    as="ul"
    columns={
      Array [
        1,
        2,
        3,
      ]
    }
    flush={false}
    ordered={false}
  >
    <ul
      className="css-az3eaj-ListBase-ListBase-ListBase em8fnr30"
    >
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 1
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 2
        </li>
      </ListItem>
      <ListItem>
        <li
          className="css-1phb9h9-ListItem e1d41c8b0"
        >
          Hello Item 3
        </li>
      </ListItem>
    </ul>
  </ListBase>
</List>
`;
